syntax = "proto3";

package envoy.extensions.filters.network.dynamic_modules.v3;

import "envoy/extensions/dynamic_modules/v3/dynamic_modules.proto";

import "google/protobuf/any.proto";

import "udpa/annotations/status.proto";

option java_package = "io.envoyproxy.envoy.extensions.filters.network.dynamic_modules.v3";
option java_outer_classname = "DynamicModulesProto";
option java_multiple_files = true;
option go_package = "github.com/envoyproxy/go-control-plane/envoy/extensions/filters/network/dynamic_modules/v3;dynamic_modulesv3";
option (udpa.annotations.file_status).package_version_status = ACTIVE;

// [#protodoc-title: Network filter for dynamic modules]
// [#extension: envoy.filters.network.dynamic_modules]

// Configuration of the network filter for dynamic modules. This filter allows loading shared object
// files that can be loaded via dlopen by the network filter.
//
// A module can be loaded by multiple network filters, hence the program can be structured in a way
// that the module is loaded only once and shared across multiple filters providing multiple
// functionalities.
//
// Unlike HTTP filters which operate on structured headers, body, and trailers, network filters
// work with raw TCP byte streams. The filter can:
//
// * Inspect, modify, or inject data into the downstream connection.
// * Access connection-level information such as addresses and TLS status.
// * Control connection lifecycle (e.g., close the connection).
//
message DynamicModuleNetworkFilter {
  // Specifies the shared-object level configuration.
  envoy.extensions.dynamic_modules.v3.DynamicModuleConfig dynamic_module_config = 1;

  // The name for this filter configuration. This can be used to distinguish between different
  // filter implementations inside a dynamic module. For example, a module can have completely
  // different filter implementations. When Envoy receives this configuration, it passes the
  // ``filter_name`` to the dynamic module's network filter config init function together with
  // the ``filter_config``. That way a module can decide which in-module filter implementation
  // to use based on the name at load time.
  string filter_name = 2;

  // The configuration for the filter chosen by ``filter_name``. This is passed to the module's
  // network filter initialization function. Together with the ``filter_name``, the module can
  // decide which in-module filter implementation to use and fine-tune the behavior of the filter.
  //
  // For example, if a module has two filter implementations, one for echo and one for rate
  // limiting, ``filter_name`` is used to choose either echo or rate limiting. The ``filter_config``
  // can be used to configure the echo behavior or the rate limiting parameters.
  //
  // ``google.protobuf.Struct`` is serialized as JSON before passing it to the module.
  // ``google.protobuf.BytesValue`` and ``google.protobuf.StringValue`` are passed directly
  // without the wrapper.
  //
  // .. code-block:: yaml
  //
  //  # Passing a string value
  //  filter_config:
  //    "@type": "type.googleapis.com/google.protobuf.StringValue"
  //    value: hello
  //
  //  # Passing raw bytes
  //  filter_config:
  //    "@type": "type.googleapis.com/google.protobuf.BytesValue"
  //    value: aGVsbG8=  # echo -n "hello" | base64
  //
  google.protobuf.Any filter_config = 3;

  // Set true if the dynamic module is a terminal filter to use without an upstream connection.
  // The dynamic module is responsible for creating and sending the response to downstream.
  // If not specified, defaults to false.
  bool terminal_filter = 4;
}
